spacing resolved

--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ nav {
   max-width: 1440px;
 }
 
-.hero-text {
+/* .hero-text {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -128,9 +128,9 @@ nav {
   top: 62%;
   left: 33%;
   transform: translate(-50%, -50%);
-}
+} */
 
-.hero-text h1 {
+/* .hero-text h1 {
   font-family: "poppins", Times, serif;
   font-size: 8vw;
   font-weight: 800;
@@ -138,6 +138,20 @@ nav {
   text-align: left;
   color: #3a2152;
   max-width: 90vw;
+} */
+
+.hero-text img{
+
+    width: 80%;
+    max-width: 554px;
+    height: auto;
+    /* height: 105px; */
+    margin-top: 517px;
+    margin-left: 17%;
+    display: flex;
+    object-fit: contain;
+    position: absolute;
+
 }
 
 .social-media {
@@ -812,6 +826,7 @@ hr {
   nav ul {
     display: none;
   }
+
   .logo-image {
     width: 124px;
     height: 66.41px;
@@ -1058,6 +1073,10 @@ hr {
     top: 0;
     left: 0;
     margin-top: 20px;
+  }
+
+  .hero-text{
+    display: none;
   }
 
   .logo-image {
@@ -1412,7 +1431,7 @@ hr {
   }
 
   .block2-contents {
-    width: 330px;
+    width: 320px;
     text-align: start;
   }
 
